			that applies range slopes in function slots automatically
			to function segments or curves, to account for slot range slope
		Your patches might then sound different than previously!
			if you did NOT want this, simply set @applyslope to 0.
		The attribute @notificationsformessages is now called @notifymessages. 
			Backwards compatibility SHOULD be preserved, but verify your patches.

- bach.partition
		Now when partitions of 0 are requested a "null" list is output.

***********************
*** VERSION CHANGES ***
***********************

- all objects	Fixed issues with negative midicents

- bach.recurser	New object

- bach.roll, bach.score, bach.slot
		New feature: scores can be mirrored to jitter matrices (to ease the work with Mira and Miraweb)
		New attribute @notifypaint to notify when display is refreshed

- bach.roll, bach.score
		New export as image, also in page view (see #exportimage)
		New communication with Mira/miraweb via png export (see #bach+mira)
		New "poly" message to force or handle polyphonic behaviors (see #poly+message)
		New @fadedomain attribute
		Now "dynamics2velocities" handles breakpoints
		Fixed bug causing wrong breakpoint handling for "dynamics2velocities" in some situations
		Added "part" as a possible variable for selection expressions
		Added support for removing duplicate annotation (see #annotation+duplicates)

- bach.score	Fixed possible crashes with "inscreenmeas"
		Fixed possible crashes in rare scenarios when the score was hidden.

- bach.n2mc	Now handles pitches as well 
			(this entailed compatibility breaks with older patches, but such issues is now fixed)

- bach.comb	New @repeat attribute to allow repetitions (arrangements)



v0.8b

******************************************************************
*** VERY IMPORTANT: A FEW THINGS YOU SHOULD REALLY REALLY KNOW ***
******************************************************************
